# finances

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: generate_sequence_diagrams.py  sequence_diagrams.md
fin/: four_percent_rule.py  generate_images.py  parser.py  pdf.py  plot.py
